feat: create cloudfeed post handler
This handler can be used to create a new cloudfeed on
POST /cloud_feed
